﻿
15/2/2016:
* HML seems to work now
* REFACT: fxty.Fx_Forall is now pretty printed as "Forall" with a capital letter when DEBUG is enabled, in order to distinguish System-F quantification from flexible type quantification
* FIX: fxty.nf fixed: it now reduces flexible forall ('a :> _|_). 'a to System-F forall 'a. 'a directly. This seems enough to make HML inference correct
* REFACT: cleaned up a lot ForallsQ and other stuff like that
* NEW: instantiation of quantifier+unquantified_ty is now done via a static method and not anymore by active patterns
* NEW: (|Mapped|) active pattern: promoted to Prelude
* REFACT: refactoring datatype involved in gen_bind for generic multiple binding management


12/2/2016:
* REFACT active patterns dealing with quantification, instantiation, unquantification etc. have been redesigned
* BUG: still not working: it still inferes the same it used to infer before the first big fix, still with no fxty


11/2/2016:
* REFACT: tksubst is not a type alias anymore but a record
* FIX: is_instance_of redesigned and refactored as a member of type ty
* REFACT: monad builders designed reworked
* REFACT: major refactor done
* FIX: D_Type declarations now create a dummy Td_Decl when calling type evaluation and kind inference
* BUG: (|Fx_ForallsQ|) does not handle possible foralls within the internal ty node


10/2/2016:
* REFACT: constraint, types, schemes and flex types instantiation (i.e. variable refreshment) has been widely redesigned
* REFACT: big refactor of monad builders
* UP: more modules ported to the new design
* UP: unification of T_Forall does not unify kinds of the sub-term anymore, as it was done automatically by recursion


9/2/2016: [v0.9.1]
* version bump due to major refactor
* REFACT: flexible types reimplemented as a new datatype and former type "ty" stands now for System-F types
* REFACT: substitution system cleaned up
* REFACT: unquantified types are now detectable via an active pattern